--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">ALC-4.0-Android-Challenge-2</string>
+    <string name="app_name">Travelmantics</string>
+    <string name="hint_deal_title">Deal Title</string>
+    <string name="hint_deal_description">Description</string>
+    <string name="hint_deal_price">Price (numbers only)</string>
+    <string name="save">Save</string>
 </resources>
