--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hint_deal_description">Description</string>
     <string name="hint_deal_price">Price (numbers only)</string>
     <string name="save">Save</string>
+    <string name="new_travel_deal">New Travel Deal</string>
 </resources>
