--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="save">Save</string>
     <string name="new_travel_deal">New Travel Deal</string>
     <string name="delete_deal">Delete Deal</string>
+    <string name="log_out">Log out</string>
 </resources>
