Upload and delete Image Show image Admin privilege for add image Fixed checkAdmin function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="new_travel_deal">New Travel Deal</string>
     <string name="delete_deal">Delete Deal</string>
     <string name="log_out">Log out</string>
+    <string name="add_image">Add Image</string>
 </resources>
